--- a/requirements.txt
+++ b/requirements.txt
@@ -1,223 +1,7 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1742562417367/work
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
-aiosignal==1.3.2
-alabaster==1.0.0
-applaunchservices==0.3.0
-appnope==0.1.4
-arrow==1.3.0
-astroid==3.3.9
-asttokens @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_11i8cnwuxs/croot/asttokens_1743630449718/work
-astunparse==1.6.3
-asyncssh==2.20.0
-atomicwrites==1.4.1
-attrs==25.3.0
-autopep8==2.0.4
-babel==2.17.0
-backports.tarfile==1.2.0
-beautifulsoup4==4.13.3
-binaryornot==0.4.4
-black==25.1.0
-bleach==6.2.0
-Bottleneck @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_55txi4fy1u/croot/bottleneck_1731058642212/work
-Brotli @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_f7i0oxypt6/croot/brotli-split_1736182464088/work
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
-certifi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_53iribkvo4/croot/certifi_1738623743875/work/certifi
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-click==8.1.8
-cloudpickle==3.1.1
-comm @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3doui0bmzb/croot/comm_1709322861485/work
-contourpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_2cvjf0v4ux/croot/contourpy_1732540055997/work
-cookiecutter==2.6.0
-cryptography==44.0.2
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1733332471406/work
-debugpy==1.8.13
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml==0.7.1
-Deprecated==1.2.18
-diff-match-patch==20241021
-dill==0.3.9
-docstring-to-markdown==0.16
-docutils==0.21.2
-et-xmlfile==1.1.0
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema==2.21.1
-filelock @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_f6dmuewahq/croot/filelock_1744281400993/work
-flake8==7.1.2
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1739279199749/work
-fonttools @ file:///Users/runner/miniforge3/conda-bld/fonttools_1743732270720/work
-frozenlist==1.5.0
-fsspec==2025.3.2
-gast @ file:///home/conda/feedstock_root/build_artifacts/gast_1733299680490/work
-gmpy2 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_51391juwln/croot/gmpy2_1738085477864/work
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpc-split_1740784252780/work
-h5py @ file:///Users/runner/miniforge3/conda-bld/h5py_1739952814274/work
-idna @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a12xpo84t2/croot/idna_1714398852854/work
-imagesize==1.4.1
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1737420181517/work
-inflection==0.5.1
-intervaltree==3.1.0
-ipykernel==6.29.5
-ipython @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_2evnd74hdv/croot/ipython_1734548057210/work
-ipywidgets @ file:///home/conda/feedstock_root/build_artifacts/ipywidgets_1744294556535/work
-isort==6.0.1
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_38ctoinnl0/croot/jedi_1733987402850/work
-jellyfish==1.2.0
-Jinja2 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_2cnn4kenrm/croot/jinja2_1741710859444/work
-joblib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8ff7uji0v2/croot/joblib_1718217225309/work
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-jupyterlab_widgets @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_widgets_1744291043727/work
-keras @ file:///home/conda/feedstock_root/build_artifacts/keras_1741854587245/work
-keyring==25.6.0
-kiwisolver @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_cc2l_z_0ri/croot/kiwisolver_1737039586949/work
-libclang==18.1.1
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156458/work
-markdown-it-py @ file:///home/conda/feedstock_root/build_artifacts/markdown-it-py_1733250460757/work
-MarkupSafe @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1f_uj4vxik/croot/markupsafe_1738584045311/work
-matplotlib==3.10.1
-matplotlib-inline @ file:///Users/cbousseau/work/recipes/ci_py311/matplotlib-inline_1677918241899/work
-mccabe==0.7.0
-mdurl @ file:///home/conda/feedstock_root/build_artifacts/mdurl_1733255585584/work
-mistune==3.1.3
-ml_dtypes==0.5.1
-more-itertools==10.6.0
-mpmath @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_17iu6a8a3m/croot/mpmath_1690848269369/work
-multidict==6.4.2
-munkres==1.1.4
-mypy-extensions==1.0.0
-namex @ file:///home/conda/feedstock_root/build_artifacts/namex_1733858070416/work
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_e6lt1dcyid/croot/networkx_1737040482044/work
-numexpr @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b3kvvt6tc6/croot/numexpr_1730215947700/work
-numpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a51i_mbs7m/croot/numpy_and_numpy_base_1708638620867/work/dist/numpy-1.26.4-cp311-cp311-macosx_11_0_arm64.whl#sha256=3d90dd3382cff7becb2384f73058a8e72b81c697e8bb77f1c69a82caca5b0c57
-numpydoc==1.8.0
-opencv-python==4.11.0.86
-openpyxl @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_96hhik4ygv/croot/openpyxl_1721752931204/work
-opt_einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1733687912731/work
-optree @ file:///Users/runner/miniforge3/conda-bld/optree_1744034247042/work
-packaging @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a6_qk3qyg7/croot/packaging_1734472142254/work
-pandas @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_4aifrweohv/croot/pandas_1732735109535/work/dist/pandas-2.2.3-cp311-cp311-macosx_11_0_arm64.whl#sha256=da1b15a6c44417bf569e7bf374212fb55584fd9af1b0e93fcf861027f70b517e
-pandocfilters==1.5.1
-parso @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8824a1w4md/croot/parso_1733963320105/work
-pathspec==0.12.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare==0.7.5
-pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1735929745664/work
-platformdirs==4.3.7
-pluggy==1.5.0
-prompt-toolkit @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_c63v4kqjzr/croot/prompt-toolkit_1704404354115/work
-propcache==0.3.1
-protobuf @ file:///Users/runner/miniforge3/conda-bld/protobuf_1731365515766/work/bazel-bin/python/dist/protobuf-5.28.3-cp311-abi3-macosx_11_0_arm64.whl#sha256=57b3ebb91af7c5a6f2b88849429b69429727a78533c2e0542f38460ab24aeb74
-psutil==7.0.0
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycodestyle==2.12.1
-pycparser==2.22
-pydocstyle==6.3.0
-pyflakes==3.2.0
-PyGithub==2.6.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
-PyJWT==2.10.1
-pylint==3.3.6
-pylint-venv==3.0.4
-pyls-spyder==0.4.0
-PyNaCl==1.5.0
-pyobjc-core==11.0
-pyobjc-framework-Cocoa==11.0
-pyobjc-framework-CoreServices==11.0
-pyobjc-framework-FSEvents==11.0
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1743089729650/work
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.16
-PyQt5_sip==12.17.0
-PyQtWebEngine==5.15.7
-PyQtWebEngine-Qt5==5.15.16
-PySocks @ file:///Users/cbousseau/work/recipes/ci_py311/pysocks_1677906386870/work
-python-dateutil @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_66ud1l42_h/croot/python-dateutil_1716495741162/work
-python-lsp-black==2.0.0
-python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.12.2
-python-slugify==8.0.4
-pytoolconfig==1.3.1
-pytz @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a4b76c83ik/croot/pytz_1713974318928/work
-pyuca==1.2
-PyYAML @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_faoex52hrr/croot/pyyaml_1728657970485/work
-pyzmq==26.4.0
-QDarkStyle==3.2.3
-qstylizer==0.2.4
-QtAwesome==1.4.0
-qtconsole==5.6.1
-QtPy==2.4.3
-referencing==0.36.2
-requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ee45nsd33z/croot/requests_1730999134038/work
-rich @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_rich_1743371105/work/dist
-roman-numerals-py==3.1.0
-rope==1.13.0
-rpds-py==0.24.0
-rtree==1.4.0
-scikit-learn @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_2coq3750ge/croot/scikit-learn_1737988773864/work
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy-split_1739790733133/work/dist/scipy-1.15.2-cp311-cp311-macosx_11_0_arm64.whl#sha256=22d09b058f8dc2ede3b7efb028656169f42c30d91d02da114d6db6c6ccd40800
-six @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_03myqm7p6o/croot/six_1744271511946/work
-snowballstemmer==2.2.0
-sortedcontainers==2.4.0
-soupsieve==2.6
-Sphinx==8.2.3
-sphinxcontrib-applehelp==2.0.0
-sphinxcontrib-devhelp==2.0.0
-sphinxcontrib-htmlhelp==2.1.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==2.0.0
-sphinxcontrib-serializinghtml==2.0.0
-spyder==6.0.5
-spyder-kernels==3.0.3
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-superqt==0.7.3
-sympy==1.13.1
-tabulate==0.9.0
-tensorboard==2.19.0
-tensorboard_data_server @ file:///var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_32p363irxt/croot/tensorboard-data-server_1724172561901/work/tensorboard_data_server-0.7.0-py3-none-macosx_11_0_arm64.whl#sha256=6631fdebab6ad0bac03ac2d86882087bfe5b5f233e8aa8669b8b6cf67d1f388d
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.37.1
-tensorflow_estimator @ file:///Users/isuruf/projects/tensorflow-feedstock/miniforge3/conda-bld/tensorflow-split_1739835771143/work/tensorflow-estimator/wheel_dir/tensorflow_estimator-2.15.0-py2.py3-none-any.whl#sha256=3998be95d73ed0db6db4a8e2d7a47c3e87c1a8d7a4209a82c86b3b04be29a0af
-termcolor @ file:///home/conda/feedstock_root/build_artifacts/termcolor_1743676967121/work
-text-unidecode==1.3
-textdistance==4.6.3
-threadpoolctl @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_efa5bvb6vi/croot/threadpoolctl_1719407806403/work
-three-merge==0.1.1
-tinycss2==1.4.0
-tomlkit==0.13.2
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
-tornado @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0axef5a0m0/croot/tornado_1733960501260/work
-traitlets @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_500m2_1wyk/croot/traitlets_1718227071952/work
-types-python-dateutil==2.9.0.20241206
-typing_extensions @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_0b3jpv_f79/croot/typing_extensions_1734714864260/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-ujson==5.10.0
-unicodedata2 @ file:///Users/runner/miniforge3/conda-bld/unicodedata2_1736692555874/work
-urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8dwi5l2dj0/croot/urllib3_1737133640453/work
-watchdog==6.0.0
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-Werkzeug @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_87am5fxnsf/croot/werkzeug_1737448721856/work
-whatthepatch==1.0.7
-widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1744291053367/work
-wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1736869493930/work
-wurlitzer==3.1.1
-yapf==0.43.0
-yarl==1.19.0
-zipp @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_echurpkwug/croot/zipp_1732630743967/work
+tensorflow==2.12.0
+opencv-python==4.11.0
+numpy==1.24.3
+pandas==2.0.3
+matplotlib==3.7.2
+scikit-learn==1.3.0
+pillow==10.0.0
